--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<style>
 		h1 {
 			font-size: 150px;
+			style='colour:red'
 			text-align: center;
 			position: fixed;
 			top: 50%;
@@ -16,6 +17,7 @@
 			width: 150%;
 			margin: 0;
 			padding: 0;
+			font color="red”
 		}
 	</style>
 </head>
