--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			margin: 0;
 			padding: 0;
 			font color="red”
-			<img src="smiley.gif" alt="Smiley face" height="42" width="42">
+			img src="smiley.gif" alt="Smiley face" height="42" width="42"
 		}
 	</style>
 </head>
