--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			margin: 0;
 			padding: 0;
 			font color="red”
-			img src="smiley.gif" alt="Smiley face" height="42" width="42"
+			
 		}
 	</style>
 </head>
@@ -25,6 +25,7 @@
 	<h1>
 
 		easyfish...
+		<img src="https://www.google.com.au/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwi43aaxscXPAhXGk5QKHT4-CLkQjRwIBw&url=http%3A%2F%2Fwww.dragoart.com%2Ftuts%2F6011%2F1%2F1%2Fhow-to-draw-an-easy-fish.htm&psig=AFQjCNGmyfS-MU-8s50ir6ZI2rUOzD5j1A&ust=1475816053735033" alt="Smiley face" height="42" width="42">
 
 	</h1>
 </body>
