--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<h1>
 
 		easyfish...
-		<img src="https://www.google.com.au/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwi43aaxscXPAhXGk5QKHT4-CLkQjRwIBw&url=http%3A%2F%2Fwww.dragoart.com%2Ftuts%2F6011%2F1%2F1%2Fhow-to-draw-an-easy-fish.htm&psig=AFQjCNGmyfS-MU-8s50ir6ZI2rUOzD5j1A&ust=1475816053735033" alt="Smiley face" height="42" width="42">
+		<img src="https://imgs-steps-dragoart-386112.c.cdn77.org/how-to-draw-an-easy-fish-step-3_1_000000033953_5.jpg" alt="Smiley face" height="42" width="42">
 
 	</h1>
 </body>
