--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<h1>
 
 		easyfish...
-		<img src="https://imgs-steps-dragoart-386112.c.cdn77.org/how-to-draw-an-easy-fish-step-3_1_000000033953_5.jpg" alt="Smiley face" height="242" width="242">
+		<img src="http://www.designveryeasy.com/images/original/Draw-Easy-Fish%2C-Step-Step%2C-Fish%2C-Animals%2C-FREE-Online-168322.jpg" alt="Smiley face" height="342" width="342">
 
 	</h1>
 </body>
