--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,17 +17,17 @@
 			width: 50%;
 			margin: 0;
 			padding: 0;
-			font color="red”
-			
+			color: red;
 		}
 	</style>
 </head>
+
 <body>
 	<h1>
-
 		easyfish...
-		<img src="http://www.designveryeasy.com/images/original/Draw-Easy-Fish%2C-Step-Step%2C-Fish%2C-Animals%2C-FREE-Online-168322.jpg" alt="Smiley face" height="542" width="542">
+		<img src="./20200520_182938.gif" alt="Easy Fish" />
 
 	</h1>
 </body>
+
 </html>
